--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "mongoose": "^5.9.10",
         "multer": "^1.4.2",
         "nodemailer": "^6.4.8",
-        "nodemailer-express-handlebars": "^4.0.0"
+        "nodemailer-express-handlebars": "^4.0.0",
+        "twilio": "^3.50.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
